--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,7 +3,7 @@
 html,
 body {
   overflow-x: hidden;
-  background-image: url('http://vibemta.mtasa.eu/terraaliens/images/indexBackground.png');
+  background-image: url('https://i.imgur.com/zT6uGH1.jpg');
   background-repeat: no-repeat;
   background-size: cover;
   margin: 0;
@@ -18,28 +18,4 @@ a {
 
 * {
   box-sizing: border-box;
-}
-
-@font-face {
-  font-family: 'TT Firs Neue';
-  src: local('TT Firs Neue Light'), local('TTFirsNeue-Light'),
-    url('../public/fonts/TTFirsNeue-Light.ttf') format('truetype');
-  font-weight: 300;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: 'TT Firs Neue';
-  src: local('TT Firs Neue Regular'), local('TTFirsNeue-Regular'),
-    url('../public/fonts/TTFirsNeue-Regular.ttf') format('truetype');
-  font-weight: normal;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: 'TT Firs Neue';
-  src: local('TT Firs Neue Medium'), local('TTFirsNeue-Medium'),
-    url('../public/fonts/TTFirsNeue-Medium.ttf') format('truetype');
-  font-weight: 500;
-  font-style: normal;
 }
