--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,7 +4,7 @@
 html,
 body {
   overflow-x: hidden;
-  background-image: url('https://i.imgur.com/zT6uGH1.jpg');
+  background-image: url('https://i.imgur.com/oHci7n4.jpg');
   background-repeat: no-repeat;
   background-size: cover;
   margin: 0;
